# xaspy-web

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
data/: Fe-BL402-fly_example.csv  Fe-BL402-point_example.csv  Fe-BL631-1200l_example.csv  Fe-BL631-600l_example.csv  Ni-BL402-fly_example.csv  Ni-BL402-point_example.csv  Ni-BL631-1200l_example.csv  Ni-BL631-600l_example.csv
